[project]
name = "spine-graphrag"
version = "1.26.0"
description = "Spine GraphRAG - Neo4j based medical literature knowledge graph system"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # LLM Integration
    "anthropic>=0.40.0,<1.0.0",
    "openai>=1.0.0,<3.0.0",
    "google-genai>=1.0.0,<2.0.0",
    # Graph Database (Neo4j - Single Store)
    "neo4j>=5.15.0,<7.0.0",
    # PDF Processing
    "PyMuPDF>=1.23.0,<2.0.0",
    # Web / HTTP
    "requests>=2.31.0,<3.0.0",
    "aiohttp>=3.8.0,<4.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
    "httpx>=0.24.0,<1.0.0",
    # Embedding & ML
    "numpy>=1.24.0,<3.0.0",
    # chromadb removed in v1.14.12 - Neo4j Vector Index only
    # MCP Server (SSE + Streamable HTTP Transport)
    "mcp>=1.8.0,<2.0.0",
    "starlette>=0.27.0,<1.0.0",
    "uvicorn>=0.20.0,<1.0.0",
    "fastapi>=0.100.0,<1.0.0",
    # Utilities
    "python-dotenv>=1.0.0,<2.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "rapidfuzz>=3.0.0,<4.0.0",
    "structlog>=23.1.0,<25.0.0",
    "nest-asyncio>=1.5.0,<2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
nlp = ["spacy>=3.0.0"]
ml = [
    "sentence-transformers>=2.2.0,<4.0.0",
    "torch>=2.0.0,<3.0.0",
    "networkx>=3.0,<4.0.0",
]
legacy = [
    "langchain-core>=0.2.0,<0.4.0",
    "langchain-anthropic>=0.1.0,<1.0.0",
    "langchain-google-genai>=1.0.0,<3.0.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: marks tests as integration tests (require real Neo4j)",
]
addopts = "-m 'not integration'"
